[package]
name = "roguelike"
version = "0.1.0"
authors = ["Luke Dowell <lukedowell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", commit = "a5d2501b75eccbe241a70ad8ccf09787e709fe1f" }
rand = { version = "0.8.3" }
